@@ -485,8 +485,8 @@ manuals using Info.  If lilypond-mode is not installed on your
 platform, then refer to the installation instructions for more
 information.
 
-For VIM, a vimrc is supplied, along with syntax coloring tools. For
-more information, refer to the
+For @uref{http://www.vim.org,VIM}, a vimrc is supplied, along with
+syntax coloring tools. For more information, refer to the
 @ifhtml
 @uref{../../../topdocs/out-www/INSTALL.html,installation instructions}.
 @end ifhtml
@@ -499,8 +499,9 @@ For both editors, there is also a facility to jump in the input file
 to the source of errors in the graphical output. See @ref{Point and
 click}.
 
-There exists a plugin jEdit. Refer to the
-@uref{website,lily4jedit.sourceforget.net} for more information.
+There exists a plugin for @uref{http://www.jedit.org/,jEdit}. Refer to
+the @uref{http://lily4jedit.sourceforget.net,plugin website} for more
+information.
 
 
 @node Point and click
