@@ -23,7 +23,7 @@ horizontal_space# :=  .66 ex#;
 font_x_height ex#;
 font_normal_space horizontal_space#;
 
-define_pixels (staffspace, stafflinethickness, ex, descender, ascender);
+define_pixels (staffspace, linethickness, stafflinethickness, ex, descender, ascender);
 
 fet_beginfont("feta-din", design_size);
 
