@@ -1,5 +1,11 @@
 2004-01-25  Han-Wen Nienhuys   <hanwen@xs4all.nl>
 
+	* scm/define-grobs.scm (all-grob-descriptions): use staff-padding
+	for Fingering.
+
+	* lily/side-position-interface.cc (out_of_staff): don't do
+	anything if staff-padding not defined. 
+
 	* mf/feta-params.mf (stafflines): introduce linethickness as
 	general blackness of the font.
 
